dot animation + fixing positions on mobile

--- a/app/src/style/index.css
+++ b/app/src/style/index.css
@@ -782,6 +782,6 @@ button, a.button {
   z-index: 999;
 }
 
-.z-tier-3 {
+.z-tier-4 {
   z-index: 9999;
 }
