--- a/app/src/style/main.css
+++ b/app/src/style/main.css
@@ -71,6 +71,7 @@ section {
 
 .slider {
     display: flex;
+    gap: 2.5rem;
     overflow-x: auto;
     overscroll-behavior-inline: contain;
 
@@ -95,32 +96,6 @@ section {
     text-align: center;
 }
 
-@media (min-width: 47em) {
-    .results-container {
-        margin-left: 8rem;
-    }
-
-    .slider-heading {
-        margin-right: 8rem;
-    }
-
-    .slider {
-        gap: 2.5rem;
-
-        /* padding-right: 7.5rem; */
-
-      }
-    
-    .slider > * {
-        width: 66%;
-    }
-
-    .dot-track {
-        padding-right: 7.5rem;
-
-    }
-}
-
 .slider-button img {
     position: absolute;
     top: 50%;
@@ -138,20 +113,17 @@ section {
 }
 
 .prev-button {
-    left: 0;
+    left: 0rem;
 }
 
 .next-button {
-    right: 4rem;
+    right: -2.5rem;
 }
 
 .dot-track {
     width: min-content;
 
     margin-top: 1rem;
-    margin-right: 7.5rem;
-
-    /* background-color: lawngreen; */
 
     display: flex;
     gap: 0.5rem;
@@ -171,6 +143,53 @@ section {
 .dot.active,
 .dot:focus {
     background-color: var(--clr-neutral-900);
+}
+
+@media (max-width: 47em) {
+    .results-container {
+        width: calc(100% - 3rem);
+        margin-inline: auto;
+    }
+    
+    .slider-button img {
+        width: 2.5rem;
+        aspect-ratio: 1;
+
+    }
+
+    .dot-track {
+        /* display: none; */
+    }
+}
+
+@media (min-width: 47em) {
+    .results-container {
+        margin-left: 8rem;
+    }
+
+    .slider-heading {
+        margin-right: 8rem;
+    }
+
+    .slider {
+        gap: 2.5rem;
+    }
+    
+    .slider > * {
+        width: 66%;
+    }
+    
+    .prev-button {
+        left: 0;
+    }
+
+    .next-button {
+        right: 4rem;
+    }
+
+    .dot-track {
+        padding-right: 7.5rem;
+    }
 }
 
 /* card */
